[package]
name = "pagat"
description = "A library that helps you split the bill"
version = "0.0.1"
authors = ["Matheus Macabu <mkbu95@gmail.com>"]
keywords = ["bills", "split", "graphs", "money"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/macabu/pagat.git"
readme = "README.md"
edition = "2021"

[lib]
name = "pagat"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
petgraph = "0.6.2"
thiserror = "1.0.37"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
