[package]
name = "pagat"
description = "A library that helps you split the bill"
version = "0.0.2"
authors = ["Matheus Macabu <mkbu95@gmail.com>"]
keywords = ["bills", "split", "graphs", "money"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/macabu/pagat.git"
readme = "README.md"
edition = "2021"

[lib]
name = "pagat"

[dependencies]
petgraph = "0.6.3"
thiserror = "1.0.40"
